# qneogeo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bios.cpp  bios.h  emulatorview.cpp  emulatorview.h  endian.h  fbneolibretrocore.cpp  fbneolibretrocore.h  fbneotrainingcore.cpp  fbneotrainingcore.h  gameai.cpp  gameai.h  gamememreader.cpp  gamememreader.h  gamememreadercore.cpp  gamememreadercore.h  iemulatorcore.cpp  iemulatorcore.h  inputmappingwidget.cpp  inputmappingwidget.h  kof98hitboxoverlay.cpp  kof98hitboxoverlay.h  kof98movedata.cpp  kof98movedata.h  koframtracelogger.cpp  koframtracelogger.h  libretrocore.cpp  libretrocore.h  main.cpp  mainwindow.cpp  mainwindow.h  memory.h  memorysearchdialog.cpp  memorysearchdialog.h  neocdlibretrocore.cpp  neocdlibretrocore.h  (+9 more)
docs/: kof98-reaction-validation-20260723.md  strategy-v2.md  strategy-v4-bc-pilot-20260724.md
shaders/: README.md  frame.frag  frame.vert  zfast_crt.glsl
tools/: evaluate_kof98_physical.py  fbneo_training.cpp  fbneo_training.h  kof98_curriculum.py  kof98_env.py  kof98_kickstart.py  kof98_model_transfer.py  kof98_observation.py  kof98_oracle_scanner.py  kof98_oracle_teacher.py  kof_ppo_inference_bridge.py  neocd_bios_probe.cpp  run_strategy_v4_pilot.py  train_kof98_ppo.py  verify_kof98_actions.py  watch_kof98_ppo.py
